Tweak surefire configuration to enable `phenol-io` tests